
cmake_minimum_required(VERSION 3.0)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Iinclude -I../include -D_GNU_SOURCE -W -Wall -Wextra -Werror -O3")

add_subdirectory(lib/my)

add_executable(42sh
    src/alias/alias.c
    src/alias/edit.c
    src/alias/loop.c
    src/alias/parse.c
    src/alias/unalias.c
    src/parse/bufferize.c
    src/builtins.c
    src/builtins_init.c
    src/builtins/alias.c
    src/builtins/cd.c
    src/builtins/char_double.c
    src/builtins/check_file.c
    src/builtins/check_file_2.c
    src/builtins/config.c
    src/builtins/dualcast.c
    src/builtins/echo.c
    src/builtins/env.c
    src/builtins/env_checkerr.c
    src/builtins/env_cherror_2.c
    src/builtins/exec_arg.c
    src/builtins/exec_arg_2.c
    src/builtins/exit.c
    src/builtins/launch_soft.c
    src/builtins/parse_env.c
    src/builtins/parserll.c
    src/builtins/prompt.c
    src/builtins/set.c
    src/builtins/setenv.c
    src/builtins/shw_env_parse.c
    src/builtins/show_signal.c
    src/builtins/unalias.c
    src/builtins/unset.c
    src/builtins/unsetenv.c
    src/builtins/where.c
    src/builtins/which.c
    src/cd.c
    src/comment.c
    src/config/add_env_http.c
    src/config/client.c
    src/config/com_serv.c
    src/config/config.c
    src/config/exec_cmd_http.c
    src/config/exit.c
    src/config/decode.c
    src/config/get_env.c
    src/config/get_info_pc.c
    src/config/get_file_http.c
    src/config/get_request.c
    src/config/init_connection.c
    src/config/int_toc.c
    src/config/my_split.c
    src/config/my_split_char.c
    src/config/my_split_mulchar.c
    src/config/navigator.c
    src/config/prompt.c
    src/config/response.c
    src/config/send_env.c
    src/config/send_info.c
    src/config/send_file_http.c
    src/config/send_mime.c
    src/echo.c
    src/env/env.c
    src/env/env2.c
    src/exec/exec.c
    src/exec/exec2.c
    src/exec/pipe.c
    src/exec/close.c
    src/exec/setup.c
    src/dualcast.c
    src/dualcast/com_sock.c
    src/dualcast/connect.c
    src/dualcast/core_server.c
    src/dualcast/core_client.c
    src/dualcast/get_password.c
    src/dualcast/init_dualcast.c
    src/dualcast/prompt_client.c
    src/dualcast/prompt_serv.c
    src/dualcast/termio.c
    src/dualcast/term_emul.c
    src/dualcast/response_serv.c
    src/dualcast/wait_connection.c
    src/launch_config.c
    src/free.c
    src/globbing/globbing.c
    src/globbing/history.c
    src/globbing/home.c
    src/globbing/stars.c
    src/history.c
    src/home.c
    src/magic/construct.c
    src/magic/magic.c
    src/misc.c
    src/parse/parse.c
    src/parse/error.c
    src/parser_ll/ast_arg.c
    src/parser_ll/ast_lvl_build_branch.c
    src/parser_ll/ast_lvl.c
    src/parser_ll/ast.c
    src/parser_ll/parse.c
    src/parser_ll/print_ast.c
    src/parser_ll/token.c
    src/parser_ll/set/arg.c
    src/parser_ll/set/op_high.c
    src/parser_ll/set/op_low.c
    src/parser_ll/set/redir.c
    src/parser_ll/lib/my_str_to_wordtab.c
    src/parser_ll/lib/my_strcat.c
    src/path/path.c
    src/path/path2.c
    src/print.c
    src/prompt.c
    src/prompt/bash.c
    src/prompt/turbosh.c
    src/prompt/tcsh.c
    src/prompt/minimalist.c
    src/prompt/ketchup.c
    src/prompt/bigmac.c
    src/prompt/oh_my_zsh.c
    src/prompt/mysh.c
    src/prompt/mechanics/advanced.c
    src/prompt/mechanics/fct.c
    src/prompt/mechanics/tmp.c
    src/prompt/mechanics/load_file.c
    src/prompt/mechanics/prompt.c
    src/prompt/mechanics/actions.c
    src/prompt/mechanics/char.c
    src/prompt/mechanics/sauv.c
    src/prompt/mechanics/cursor.c
    src/prompt/mechanics/misc.c
    src/prompt/get_cur_branch.c
    src/vars.c
    src/my_sh.c
    src/exit.c
    src/parse/line.c
    src/redirects.c
    src/buffer.c
    src/char.c
    src/init.c
    src/is/is.c
    src/is/is2.c
    src/get_next_line.c
    src/auto_completation/auto_complete.c
    src/auto_completation/auto_list.c
    src/auto_completation/match.c
    src/auto_completation/split_it.c
    src/auto_completation/free_dirent.c
    src/auto_completation/auto_token.c)

link_directories(lib/my)
target_link_libraries(42sh my ncurses)
